# mathnet-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: blog_draft_notes.md  coordination_week2.md  day1_report.md  day2_report.md  dr_grpo_plan.md  drgrpo_vs_base_analysis.md  drgrpo_vs_run4_analysis.md  drgrpo_writeup.md  findings.md  gpt-missrate-analysis.md  gpt-missrate-preregistration.md  grader-todos.md  qwen3_base_topic_breakdown.md  tir_rag_plan.md
docs/spikes/: day0_toy.py
results/full/: NOTES.md  openai-flagged-problems.md
results/full/gemini-3-pro/: 007c.graded.json  007c.json  0081.graded.json  0081.json  008t.graded.json  008t.json  0092.graded.json  0092.json  00b9.graded.json  00b9.json  00br.graded.json  00br.json  00c3.graded.json  (+468 more)
scripts/: analyze_finetune_vs_base.py  augment_train_with_boxed.py  build_cot_exemplar_bank.py  build_dev_split.py  build_self_distill_data.py  build_splits.py  build_tir_exemplar_bank.py  check_tir_sandbox.py  collect_openai_flags.py  compare_configs.py  compute_parity_mcnemar.py  eval_best_of_n.py  eval_budget_forcing.py  eval_qwen_hf.py  eval_tir.py  filter_train_by_solution_length.py  grade_results.py  inspect_mathnet.py  make_blog_tables.py  make_diagnostic_figures.py  make_figures.py  merge_adapter.py  preflight.py  run_eval.py  run_retrieval_ablation.py  stratified_topic_analysis.py  train_dr_grpo.py  train_qlora.py  verify_boxed_augmentation.py  verify_response_template.py
slurm/: build_cot_exemplar_bank.sbatch  build_tir_exemplar_bank.sbatch  calibrate_dr_grpo.sbatch  eval_dr_grpo.sbatch  eval_qwen.sbatch  eval_qwen25_run1.sbatch  eval_qwen25_run1_to_n150.sbatch  eval_qwen3_base.sbatch  eval_qwen3_base_bon.sbatch  eval_qwen3_base_pilot.sbatch  eval_qwen3_run2.sbatch  eval_qwen3_run2_bf.sbatch  eval_qwen3_run2_bon.sbatch  eval_qwen3_run3.sbatch  eval_qwen3_run4.sbatch  eval_tir.sbatch  eval_tir_vllm_smoke.sbatch  full_eval.sbatch  pilot_run4.sbatch  postprocess_dr_grpo.sbatch  postprocess_run4.sbatch  run_retrieval_ablation.sbatch  train_dr_grpo.sbatch  train_qlora.sbatch  train_qlora_run2.sbatch  train_qlora_run3.sbatch  train_qlora_run4.sbatch  train_qlora_run4_lite.sbatch  train_qlora_run4_n150.sbatch  train_qlora_run_b_completion_only.sbatch  train_qlora_run_d_lower_lr.sbatch
src/mathnet_eval/: __init__.py  analysis.py  data.py  grading.py  inference.py  retrieval.py  tir.py  tir_prompts.py  training.py
tests/: test_grading.py  tir_sandbox_sentinels.json  tir_smoke_exemplar_bank.jsonl
(+4237 files in other folders)
